--- a/public/_index.html
+++ b/public/_index.html
@@ -145,11 +145,11 @@ input[type=range]:focus::-ms-fill-upper {
 <dt-include src="assets/tray.html"></dt-include>
 
 <d-article>
-  <h1 class="l-middle">How to Use t-SNE Effectively</h1>
-  <h2 class="l-middle">Although extremely useful for visualizing high-dimensional data, t-SNE plots can sometimes be mysterious or misleading. By exploring how t-SNE behaves in simple cases, we can learn to use it more effectively.</h2>
-  <div class="l-page">
+  <d-title>
+    <h1>How to Use t-SNE Effectively</h1>
+    <h2>Although extremely useful for visualizing high-dimensional data, t-SNE plots can sometimes be mysterious or misleading. By exploring how t-SNE behaves in simple cases, we can learn to use it more effectively.</h2>
     <dt-include src="assets/playground.html"></dt-include>
-  </div>
+  </d-title>
   <d-byline></d-byline>
   <p>A popular method for exploring high-dimensional data is something called t-SNE, introduced by <d-cite key="maaten2008visualizing">van der Maaten and Hinton in 2008</d-cite>. The technique has become widespread in the field of machine learning, since it has an almost magical ability to create compelling two-dimensonal "maps" from data with hundreds or even thousands of dimensions.
 Although impressive, these images can be tempting to misread. The purpose of this note is to prevent some common misreadings.</p>
