--- a/public/assets/playground.html
+++ b/public/assets/playground.html
@@ -2,10 +2,10 @@
   #playground {
     overflow: hidden;
     font-family: 'Open Sans', sans-serif;
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    /*border-top: 1px solid rgba(0, 0, 0, 0.1);*/
     /*border-bottom: 1px solid rgba(0, 0, 0, 0.1);*/
-    margin-top: 36px;
-    padding: 36px 0 0 0;
+    /*margin-top: 36px;*/
+    padding: 0;
     /*background: #fcfcfc;*/
     z-index: 1000;
   }
