--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
 <link href="material-icons.css" rel="stylesheet">
+<script src="https://distill.pub/template.v1.js"></script>
 <script type="text/front-matter">
   title: How to Use t-SNE Effectively
   description: Although extremely useful for visualizing high-dimensional data, t-SNE plots can sometimes be mysterious or misleading.
